--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ h1 {
 .container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
 .hero-wrapper {
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
@@ -31,12 +32,14 @@ h1 {
 .hero-bg {
   /* background-color: white;
   padding: 1rem; */
-  z-index: 1;
+  z-index: 2;
   pointer-events: none;
 }
 
 .col-wrapper {
   height: 520vh;
+  width: 66%;
+  margin: 0 auto;
   display: flex;
   gap: 1rem;
   place-content: center;
@@ -48,8 +51,19 @@ h1 {
 }
 
 .scroll-section-100 {
-  height: 200vh;
-  padding-bottom: 10rem;
+  height: 120vh;
+  padding-bottom: 2rem;
+}
+
+#controls {
+  display: flex;
+  place-content: center;
+  gap: 10px;
+}
+
+#scatter-controls {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .input {
@@ -67,11 +81,88 @@ h1 {
   animation-timing-function: ease-in-out;
 }
 
+input[type="range"] {
+  -webkit-appearance: none;
+  margin: 10px 0;
+  /* width: 100%; */
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: #000000;
+  border-radius: 1.3px;
+}
+input[type="range"]::-webkit-slider-thumb {
+  border: 1px solid #000000;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  background: #ffffff;
+  border: #000000 1px solid;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #000000;
+}
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: #000000;
+  border-radius: 1.3px;
+}
+input[type="range"]::-moz-range-thumb {
+  border: 1px solid #000000;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: #000000;
+  border-radius: 1.3px;
+}
+input[type="range"]::-ms-fill-lower {
+  background: #000000;
+  border-radius: 100%;
+}
+input[type="range"]::-ms-fill-upper {
+  background: #000000;
+  border: 1px solid #010101;
+  border-radius: 100%;
+}
+input[type="range"]::-ms-thumb {
+  border: 1px solid #000000;
+  height: 20px;
+  width: 20px;
+  border-radius: 100%;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"]:focus::-ms-fill-lower {
+  background: #000000;
+}
+input[type="range"]:focus::-ms-fill-upper {
+  background: #000000;
+}
 .background {
   z-index: 0;
 }
 .foreground {
-  z-index: 2;
+  z-index: 10;
+  backdrop-filter: blur(10px);
+  --webkit-backdrop-filter: blur(10px);
+  top: 2rem;
+  padding: 1rem;
 }
 
 h2 {
@@ -82,7 +173,7 @@ h2 {
 .textbox {
   font-size: 1rem; /* 16px */
   line-height: 1.5rem; /* 24px */
-  width: 75%;
+  width: 66%;
   margin: 0 auto;
   margin-bottom: 2rem;
 }
@@ -102,16 +193,16 @@ h2 {
   display: flex;
   place-content: center;
   align-items: center;
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
   margin: 0 auto;
   margin-bottom: 2rem;
 }
 
 .sticky {
   /* background-color: rgba(206, 3, 74, 0.5); */
-  border: 1px solid black;
+  /* border: 1px solid black; */
   position: sticky;
-  top: 10vh;
+  top: 25vh;
 }
 .sticky-top {
   /* background-color: rgba(3, 172, 206, 0.5); */
@@ -123,6 +214,9 @@ h2 {
 }
 
 #pizza-phases {
+  display: flex;
+  place-content: center;
+  align-items: center;
   height: 50vh;
   top: 25vh;
 }
@@ -160,14 +254,30 @@ h2 {
   display: none;
 }
 
-.cluster-label {
+.cluster-label,
+.legend-item {
   font-size: 0.6rem;
 }
 
+a {
+  color: white;
+}
+
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  margin: 0 0.2rem;
+}
 .direct {
+  background-color: steelblue;
+  color: steelblue;
   fill: steelblue;
 }
 .additional {
+  background-color: orange;
+  color: orange;
+
   fill: orange;
 }
 
@@ -175,7 +285,7 @@ h2 {
   position: absolute;
   width: 100%;
   height: 100vh;
-  z-index: -1;
+  z-index: 2;
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -198,21 +308,31 @@ h2 {
   width: auto; /* Maintain aspect ratio */
   display: block;
   filter: blur(20px);
-  transition: 0.3s -webkit-filter linear;
+  transition: 0.5s -webkit-filter ease-in-out;
 }
 #hero-grid img:hover {
   filter: blur(0px);
 }
 
-@media only screen and (max-width: 900px) {
+footer {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 1rem;
+  display: flex;
+}
+
+@media screen {
+}
+
+@media only screen and (max-width: 600px), screen and (min-height: 900px) {
   #hero-grid img {
     height: 30px; /* Set a fixed height */
     filter: blur(10px);
   }
 }
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1440px), screen and (min-height: 900px) {
   #hero-grid img {
-    height: 100px; /* Set a fixed height */
-    filter: blur(40px);
+    height: 60px; /* Set a fixed height */
+    filter: blur(30px);
   }
 }
