--- a/style.css
+++ b/style.css
@@ -1,12 +1,45 @@
 body {
   font-family: "Hack", Arial, sans-serif;
-  display: flex;
+  overflow: hidden;
+  overflow-x: hidden;
   margin: 0;
+  transition: all;
+  transition-duration: 5000ms;
+  animation-timing-function: ease-in-out;
+  /* display: flex;
   /* overflow-x: hidden; */
 }
 
 section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-bottom: 2rem;
+}
+
+#modal-wrapper {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  place-content: center;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 10;
+}
+
+#modal {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+}
+
+.modal-controls {
+  /* width: 80%; */
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 h1 {
@@ -50,6 +83,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   place-content: center;
+  /* overflow-x: hidden; */
 }
 
 .hero-bg {
@@ -258,7 +292,7 @@ h2 {
 }
 
 .chart {
-  /* overflow-y: scroll; */
+  /* overflow-x: scroll; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -334,7 +368,7 @@ footer a {
 
 #hero-grid {
   position: absolute;
-  width: 100vw;
+  width: 1440px;
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
@@ -343,7 +377,7 @@ footer a {
   gap: 0px;
   margin: 0 auto;
   z-index: 0;
-  /* overflow-x: scroll;
+  /* overflow-x: hidden;
   overflow-y: hidden; */
 }
 
@@ -383,6 +417,11 @@ footer a {
 
 #country-links-container li + li {
   margin-top: 10px;
+}
+
+.counter-text {
+  font-size: 36px;
+  line-height: 40px;
 }
 
 footer {
