--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Hack";
-  src: url(assets/fonts/Hack-Regular.ttf);
+  src: url(assets/fonts/Hack_Regular.woff2);
   font-weight: normal;
 }
 @font-face {
@@ -49,14 +49,14 @@ nav {
   overflow: hidden;
   position: sticky;
   top: 0;
-  /* width: 100%; */
-  display: flex;
-  /* justify-content: space-between; */
-  gap: 20px;
-  padding: 10px;
-  /* background-color: rgba(255, 255, 255, 0.5); */
   z-index: 30;
   margin: 0 auto;
+  /* padding: 10px; */
+}
+
+nav ul {
+  display: flex;
+  gap: 20px;
 }
 
 nav li {
@@ -307,7 +307,8 @@ h2 {
   margin-bottom: 2rem;
 }
 
-.textbox a {
+.textbox a,
+.tip a {
   color: #000;
 }
 
@@ -330,25 +331,13 @@ a:hover {
   padding-bottom: 25vh;
 }
 
-.graph_placeholder {
-  /* display: flex;
-  place-content: center;
-  align-items: center;
-  background-color: #f1f1f1; 
-  margin: 0 auto;
-  margin-bottom: 2rem; */
-}
-
 .sticky {
-  /* background-color: rgba(206, 3, 74, 0.5); */
-  /* border: 1px solid black; */
   position: sticky;
   top: 25vh;
   min-height: 50vh;
 }
 
 .sticky-top {
-  /* background-color: rgba(3, 172, 206, 0.5); */
   backdrop-filter: blur(10px);
   --webkit-backdrop-filter: blur(10px);
   position: sticky;
@@ -371,7 +360,6 @@ a:hover {
 }
 
 .chart {
-  /* overflow-x: scroll; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -394,9 +382,7 @@ a:hover {
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
   --webkit-backdrop-filter: blur(5px);
-  /* border: 1px solid #ccc; */
   padding: 10px;
-  /* box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2); */
   pointer-events: none;
 }
 
@@ -547,8 +533,8 @@ footer p {
 }
 
 .tip {
-  width: 40%;
-  height: 190px;
+  width: 33%;
+  /* height: 190px; */
   display: inline-flex;
   padding: 20px;
   flex-direction: column;
@@ -560,6 +546,7 @@ footer p {
 
 .emoji {
   margin: 0;
+  font-size: 64px;
 }
 
 @media screen and (max-width: 768px) {
