--- a/style.css
+++ b/style.css
@@ -502,6 +502,11 @@ footer li + li {
   line-height: 40px;
 }
 
+#back-up {
+  color: #000;
+  padding-top: 4rem;
+}
+
 footer {
   background-color: #000000;
   color: #ffffff;
