--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ section#hero {
   position: absolute;
   width: 100vw;
   height: 100vh;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   place-content: center;
