--- a/style.css
+++ b/style.css
@@ -90,7 +90,9 @@ section#hero {
   display: flex;
   align-items: center;
   place-content: center;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(20px);
+  --webkit-backdrop-filter: blur(20px);
   z-index: 40;
 }
 
@@ -100,6 +102,7 @@ section#hero {
   flex-direction: column;
   place-content: center;
   padding: 2rem;
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .modal-controls {
